Remove additional storybook styling to prevent happo diffs from being cut off

--- a/.storybook/storybook.scss
+++ b/.storybook/storybook.scss
@@ -1,6 +1,5 @@
 .sb-show-main {
   #root {
-    height: 100vh;
     .officeApp {
       .usa-form {
         min-width: 100%;
